fix columns on mobile

--- a/src/components/Hex/Hex.module.css
+++ b/src/components/Hex/Hex.module.css
@@ -1,3 +1,7 @@
+.container {
+  grid-row: 1;
+}
+
 .title {
   font-family: var(--font-serif);
   font-size: 28px;
