--- a/src/components/IChingPage/IChingPage.module.css
+++ b/src/components/IChingPage/IChingPage.module.css
@@ -17,7 +17,7 @@
   margin-bottom: 64px;
 
   @media (width <= 700px) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: auto;
   }
 }
 
